Fix for bug #20106: [DOGFOOD] caret dissapears after some edit operations Modified nsRangeList::GetFrameForNodeOffset() to handle case where aOffset is >= to number of children. r=mjudge@netscape.com